app/assets/stylesheets/global.scss
/* ... */
table.dataTable.no-footer {
  border-bottom: 1px solid $faint-neutral-color;
}

.dataTables_info, .dataTables_paginate {
  font-size: 9pt;
  margin: 20px 0;
  color: $type-lighter-color !important;
}

.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
  background: $bug-section-color !important;
  color: $content-bg-color  !important;
  border: 1px solid $bug-section-color !important;
}

.dataTables_wrapper .dataTables_paginate .paginate_button {
  border-radius: 2px;
  background: $content-bg-color;
  border: 1px solid $faint-neutral-color !important;
  -webkit-transition: all 500ms cubic-bezier(0.4, 0.0, 0.2, 1);
  transition: all 500ms cubic-bezier(0.4, 0.0, 0.2, 1);
}

.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
  background: $type-lighter-color;
  color: $content-bg-color;
  border-radius: 2px;
  border: 1px solid $type-lighter-color !important;
}
#disputes-index_filter, #complaints-index_filter, #clusters-index_filter {
  label {
    height: 100%;
  }
 }

.table-search-input {
  width: 400px;
  height: 100%;
  padding: 0 3px 0 26px;
  font-weight: 400;
  border: 1px solid #ccc;
  border-radius: 2px;
  background-image: url(image_path('layout/search_icon_lighter.svg'));
  background-repeat: no-repeat;
  background-color: $ac-nav-bg-color;
  background-size: 18px;
  background-position: 3px center;
  color: $type-lighter-color;
}
.table-search-input::-webkit-input-placeholder {
  font-size: 7pt;
  color: $content-tab-color;
}
.table-search-input::-moz-placeholder {
  font-size: 7pt;
  color: $content-tab-color;
}
.table-search-input::-ms-input-placeholder {
  font-size: 7pt;
  color: $content-tab-color;
}

/***** Pretty Tables *****/
.pretty th .current {
}

.pretty th a {
  display: block;
}

.pretty th a:hover {
  color: $type-base-color;
  text-decoration: none;
}

.pretty th a::after {
  content: '';
  display: block;
  width: 14px;
  height: 14px;
  right: 0;
  background-image: url("assets/layout/icon_sort.svg");
  background-repeat: no-repeat;
  background-position: right center;
  float: right;
}

.pretty th a.asc::after {
  background-image: url("/assets/layout/icon_sort_asc.svg");
}

.pretty th a.desc::after {
  background-image: url("/assets/layout/icon_sort_dec.svg");
}

.pretty th.center-col a::after {
  background-position: center center !important;
  margin-right: 4px;
}

/**** Additional table styles ***/
table {
  font-size: 9pt;
  border: none;
}

.index-table {
  margin-top: 12px;
}

.index-table-header {
  display: inline-block;
  float: left;
}

th {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 8pt;
  text-align: left;
}

.td-tools {
  padding: 0 !important;
  text-align: right;
}

.col-nowrap {
  white-space: nowrap !important;
}

.compact-table td {
  padding: 2px;
}

.rule-status-table > tbody > tr > td{
  border-bottom: 1px solid $faint-neutral-color;
  padding: 4px 0;
}

.rule-status-table > tbody > tr > th{
  border-bottom: 1px solid $faint-neutral-color;
  padding: 4px 0 0 30px;
  background-position: left center !important;
}

.row-alerted .alert-col {
  font-weight: 700;
  color: $user-dark-color;
  background-image: url(image_path('icon_alerted.svg'));
  background-repeat: no-repeat;
  background-size: 20px 20px;
  background-position: left center;
}

.alert-col {
  padding-left: 30px;
}

.alt-col {
  background-color: lighten( $faint-neutral-color, 2% );
}

th.alt-col {
  background-color: transparent;
}

.user-col-divider {
  border-right: 2px solid $content-bg-color;
}

/**** Col Width Mins *****/
.min70 { min-width: 70px; }
.min105 { min-width: 105px; }

#task-log-table {
  tr.task-status_on.task-type_on {
    display: table-row;
  }

  tr.task-status_off {
    display: none;
  }

  tr.task-type_off {
    display: none;
  }
}

/**** Content toolbar  *******/
/*** Current toolbar is specifically generated on a datatables table         ***/
/*** We will need to work around this for the other places where toolbars    ***/
/*** need to interact with both table data and differently displayed data.   ***/

.toolbar {
  display: flex;
  width: 100%;
  font-size: 9pt;
  margin: 20px 0;
  position: relative;
  color: $type-lighter-color;
}

.toolbar div {
  border: 1px solid $faint-neutral-color;
  padding: 3px;
  height: 35px;
}

.toolbar div {
  margin-right: 3px;
}

.toolbar div:last-child {
  //width: 100%;
  margin-right: 0 !Important;
}

.toolbar label {
  color: $type-lighter-color;
}

.toolbar input[type=search] {
  display: inline-block;
  background-color: transparent;
  border-radius: 2px;
  border: 1px solid #ccc;
  padding: 4px 5px;
}

.toolbar select {
  display: inline-block;
  background-color: $content-bg-color;
  border-radius: 0 !important;
  border: 1px solid #ccc !important;
  margin: 1px 2px;
}

.dataTables_length label, .toolbar-select-wrapper {
  background-color: $faint-neutral-color;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  display: block;
  padding: 2px 5px;
  border: none;
}

.dataTables_length{
  label {
    background-color: $nav-toolbar-color;
    font-size: 9pt;
  }
}

.toolbar-select-wrapper {
  padding: 4px 0px 2px 7px;
}

.toolbar-select-wrapper input {
  display: inline-block;
}

.toolbar-select-wrapper input[type='checkbox']{
  margin-top: 5px;
}

.toolbar-select-wrapper input[type='radio']{
  margin-top: 4px;
}


.toolbar input:focus, .toolbar select:focus {
  box-shadow: inset 0 0 5px $bug-section-color;
  outline: none;
  border: 1px solid $bug-section-color !important;
}

.toolbar input[type='checkbox']:focus, .toolbar input[type='radio']:focus {
  box-shadow: none;
  border: none;
}
/* ... */

